Jann 30/objects/Report_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supports_Multi_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Multi-Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Report Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>